# opengl-startup

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
